<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/transparant_pure"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/transparant_pure"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginLeft="@dimen/space_18"
        android:layout_marginRight="@dimen/space_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ui.CustomtextView
            android:background="@drawable/btn_shape_dialog_tambah_header"
            android:id="@+id/textLabel"
            android:text="@string/daily_visit_to"
            android:padding="@dimen/space_14"
            android:textSize="@dimen/space_14"
            android:textColor="@color/white"
            font:name = "Helvetica_Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:background="@drawable/btn_shape_dialog_tambah_footer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_80">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_marginTop="@dimen/space_10"
                    android:layout_marginLeft="@dimen/space_14"
                    android:layout_marginRight="@dimen/space_14"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ui.CustomtextView
                        font:name="Helvetica_light"
                        android:textSize="@dimen/space_12"
                        android:text="@string/daily_outlet_name"
                        android:layout_width="@dimen/space_70"
                        android:layout_height="match_parent" />

                    <ui.CustomtextView
                        font:name="GOTHAM_BOOK"
                        android:textSize="@dimen/space_14"
                        android:gravity="center"
                        android:text=" : "
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <ui.CustomtextView
                        font:name="Helvetica_Book"
                        font:type = "bold"
                        android:id="@+id/txtName"
                        android:textColor="@color/black"
                        android:textSize="@dimen/space_12"
                        android:text="-"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="@dimen/space_14"
                    android:layout_marginRight="@dimen/space_14"
                    android:layout_marginBottom="@dimen/space_14"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ui.CustomtextView
                        font:name="Helvetica_light"
                        android:textSize="@dimen/space_12"
                        android:layout_width="@dimen/space_70"
                        android:text="@string/daily_address"
                        android:layout_height="match_parent" />

                    <ui.CustomtextView
                        font:name="GOTHAM_BOOK"
                        android:textSize="@dimen/space_14"
                        android:gravity="center"
                        android:text=" : "
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <ui.CustomtextView
                        font:name="Helvetica_Book"
                        android:id="@+id/txtAddress"
                        android:textColor="@color/black"
                        android:textSize="@dimen/space_12"
                        android:text="-"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_18"
        android:layout_marginRight="@dimen/space_18"
        android:background="@drawable/btn_shape_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_45">

        <ui.CustomtextView
            android:id="@+id/text_yes"
            font:name = "Helvetica_Medium"
            android:textColor="@color/black_ep"
            android:textSize="@dimen/space_18"
            android:gravity="center"
            android:text="@string/text_yes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <View
            android:layout_marginTop="@dimen/space_5"
            android:layout_marginBottom="@dimen/space_5"
            android:background="@color/colorLineBar"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <ui.CustomtextView
            android:id="@+id/text_no"
            font:name = "Helvetica_Medium"
            android:textColor="@color/black_ep"
            android:textSize="@dimen/space_18"
            android:gravity="center"
            android:text="@string/text_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>